fix(game chat): overflow when there are a lot of messages
Ref: #92

--- a/frontend/src/components/game-chat/game-chat.component.scss
+++ b/frontend/src/components/game-chat/game-chat.component.scss
@@ -20,6 +20,7 @@
 
 .chat-messages {
   flex-grow: 1;
+  overflow-y: scroll;
   max-width: 281px;
   padding: 4px;
 }
